--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
+  "homepage": "https://MattHeffNT.github.io/voice-recorder",
   "name": "recorder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/MattHeffNT.github.io/voice-recorder",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "browserify": "^17.0.0",
     "file-saver": "^2.0.2",
     "gh-pages": "^3.1.0",
     "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4"
   },
